--- a/thesis/content/chapter-introduction.tex
+++ b/thesis/content/chapter-introduction.tex
@@ -1,28 +1,7 @@
 \chapter{Introduction}
 \index{Introduction@\emph{Introduction}}%
 
-
-This document deals with how to write a doctoral dissertation 
-using \LaTeX{}, and how to use the \texttt{utdiss2} package. 
-\index{utdiss2 package@{\texttt{utdiss2} package}}%
-
-The latest version of this document/package can be obtained from
-\url{http://www.ph.utexas.edu/~laser/craigs_stuff/LaTeX/}.\footnote{I
-will be transferring this page to the Office of Graduate
-Studies when I graduate. The new URL isn't defined yet, but I will
-place a ``redirect'' at this URL to send your browser to the correct
-location when the transition occurs.}
-If your installation of LaTeX is missing any style files used in this
-document (most likely with a \cn{usepackage\{package-name.sty\}}
-command at the beginning of disstemplate.tex), take a look at the link
-on this page to ``Frequently Requested Style Files'' or on the
-Comprehensive TeX Archive Network, \url{http://www.ctan.org}.
-
-In case of any confict between the requirements of the Office of Graduate
-Studies and what this document says to do, the requirements of the Office
-of Graduate Studies prevail.
-
-\section{History of This Package}
+\section{Background}
 \index{History of This Package@\emph{History of This Package}}%
 
 In 1991 the \texttt{utdiss} package was written by Young U. Ryu 
