--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,49 +1,128 @@
-@BOOK{knuth:tb,
-  author = "Donald K. Knuth",
-  title = "The \TeX book",
-  publisher = "Addison-Wesley",
-  year = "1984",
+@misc{mandlekar2018roboturk,
+      title={RoboTurk: A Crowdsourcing Platform for Robotic Skill Learning through Imitation}, 
+      author={Ajay Mandlekar and Yuke Zhu and Animesh Garg and Jonathan Booher and Max Spero and Albert Tung and Julian Gao and John Emmons and Anchit Gupta and Emre Orbay and Silvio Savarese and Li Fei-Fei},
+      year={2018},
+      eprint={1811.02790},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
 }
 
-@BOOK{leslie:dps,
-  author = "Leslie Lamport",
-  title = "\LaTeX: A document preparation system",
-  publisher = "Addison-Wesley",
-  year = "1994",
-  edition = "2nd",
+@misc{atlas,
+        title = {Do You Love Me?},
+        year = {2020},
+        author = {Boston Dynamics\text{, YouTube}},
+        howpublished = {\url{https://www.youtube.com/watch?v=fn3KWM1kuAw}},
 }
 
-@BOOK{gms:tlc,
-  author = "M~Goosens, F~Mittelbach and A~Samarin",
-  title = "The \LaTeX Companion",
-  publisher = "Addison-Wesley",
-  year = "1994",
+@misc{teslabot,
+    title={Tesla \text{AI} Day 2022},
+    year={2022},
+    author={Tesla\text{, YouTube}},
+    howpublished={\url{https://www.youtube.com/watch?v=fn3KWM1kuAw}},
 }
 
-@BOOK{spivak:jot,
-  author = "Michael Spivak",
-  title = "The joy of \TeX",
-  publisher = "American Mathematical Society",
-  year = "1990",
-  edition = "2nd",
-  address = "Providence, R.I.",
+@misc{openai2023gpt4,
+      title={GPT-4 Technical Report}, 
+      author={OpenAI},
+      year={2023},
+      eprint={2303.08774},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
 }
 
-@BOOK{bertin:psn,
-  author = "M.~J.~Bertin et al",
-  title = "Pisot and Salem Numbers",
-  publisher = "user Verlag",
-  address = "Berlin",
-  year = "1992",
+@misc{brohan2022rt1,
+      title={RT-1: Robotics Transformer for Real-World Control at Scale}, 
+      author={Anthony Brohan et al. },
+      year={2022},
+      eprint={2212.06817},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
 }
 
-@TECHREPORT{poorten:sp,
-  author = "Alf~J.~van der Poorten",
-  title = "Some problems of recurrent interest",
-  institution = "School of Mathematics and Physics,
-                 Macquarie University",
-  address = "North Ryde, Australia 2113",
-  number = "81-0037",
-  month = "August",
-  year = "1981",
+@misc{zhu2023viola,
+      title={VIOLA: Imitation Learning for Vision-Based Manipulation with Object Proposal Priors}, 
+      author={Yifeng Zhu and Abhishek Joshi and Peter Stone and Yuke Zhu},
+      year={2023},
+      eprint={2210.11339},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
+}
+    
+@misc{jiang2022vima,
+      title={VIMA: General Robot Manipulation with Multimodal Prompts}, 
+      author={Yunfan Jiang and Agrim Gupta and Zichen Zhang and Guanzhi Wang and Yongqiang Dou and Yanjun Chen and Li Fei-Fei and Anima Anandkumar and Yuke Zhu and Linxi Fan},
+      year={2022},
+      eprint={2210.03094},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
+}
+
+@misc{chang2020semantic,
+      title={Semantic Visual Navigation by Watching YouTube Videos}, 
+      author={Matthew Chang and Arjun Gupta and Saurabh Gupta},
+      year={2020},
+      eprint={2006.10034},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{sivakumar2022robotic,
+      title={Robotic Telekinesis: Learning a Robotic Hand Imitator by Watching Humans on Youtube}, 
+      author={Aravind Sivakumar and Kenneth Shaw and Deepak Pathak},
+      year={2022},
+      eprint={2202.10448},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
+}
+
+@misc{oculus-privacy,
+    title={Oculus Privacy Policy for Oculus Account Users},
+    year={2022},
+    author={Meta},
+}
+
+@article{Akgn2012KeyframebasedLF,
+  title={Keyframe-based Learning from Demonstration},
+  author={Barış Akg{\"u}n and Maya Cakmak and Karl Jiang and Andrea Lockerd Thomaz},
+  journal={International Journal of Social Robotics},
+  year={2012},
+  volume={4},
+  pages={343-355}
+}
+
+@inproceedings{Schulman2013LearningFD,
+  title={Learning from Demonstrations Through the Use of Non-rigid Registration},
+  author={John Schulman and Jonathan Ho and Cameron Lee and P. Abbeel},
+  booktitle={International Symposium of Robotics Research},
+  year={2013}
+}
+
+@misc{zhu2022robosuite,
+      title={robosuite: A Modular Simulation Framework and Benchmark for Robot Learning}, 
+      author={Yuke Zhu and Josiah Wong and Ajay Mandlekar and Roberto Martín-Martín and Abhishek Joshi and Soroush Nasiriany and Yifeng Zhu},
+      year={2022},
+      eprint={2009.12293},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
+}
+
+@ARTICLE{Billard:2013,
+AUTHOR = {Billard, A.  and Grollman, D. },
+TITLE   = {{R}obot learning by demonstration},
+YEAR    = {2013},
+JOURNAL = {Scholarpedia},
+VOLUME  = {8},
+NUMBER  = {12},
+PAGES   = {3824},
+DOI     = {10.4249/scholarpedia.3824},
+NOTE    = {revision \#138061}
+}
+
+@misc{zhang2018deep,
+      title={Deep Imitation Learning for Complex Manipulation Tasks from Virtual Reality Teleoperation}, 
+      author={Tianhao Zhang and Zoe McCarthy and Owen Jow and Dennis Lee and Xi Chen and Ken Goldberg and Pieter Abbeel},
+      year={2018},
+      eprint={1710.04615},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
 }
