--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -17,6 +17,8 @@
 
 \usepackage{../utdiss3}  		% Dissertation package style file.
 
+\emergencystretch=1em
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -32,7 +34,7 @@
 \usepackage{makeidx}       	% Package to make an index.
 \usepackage{graphicx}           % Including graphics
 \usepackage{cite}         	% 
-\usepackage{url}		% Allows good typesetting of web URLs.
+\usepackage[hyphens]{url}		% Allows good typesetting of web URLs.
 \usepackage{draftcopy}		% Uncomment this line to have the
 				% word, "DRAFT," as a background
 				% "watermark" on all of the pages of
@@ -46,7 +48,8 @@
 
 \author{Steve Han}  	% Required
 
-\title{Towards Large-scale Humanoid Demonstration Data Collection Using VR Headsets}
+\title{Demonstrations for Robots in Immersive Virtual Reality}
+%\title{Towards Large-scale Humanoid Demonstration Data Collection Using VR Headsets}
                                                     % Required
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -272,7 +275,7 @@ Thanks to Carlos Isaac Gonzalez and Seung Hyeon Bang for help with the real robo
 \utabstract
 \index{Abstract}%
 \indent
-Our world is designed by humans, for humans. This makes humanoid robots the perfect general-purpose platform to automate repetitive or dangerous tasks done by humans. However, due to the complexity of humanoid robots and the shortage of demonstration data, research in robot learning for humanoids is scarce. To address these challenges, I present a VR interface for collecting human demonstrations for humanoid robots in both simulation and reality. The demonstrations are then used to train an imitation learning algorithm that uses an underlying controller to abstract away the complexity of whole-body control. I further propose that by embedding this data collection mechanism in VR video games, we can amass a large-scale dataset of high quality human demonstrations that can drive the development of future autonomous humanoids. To illustrate the feasibility of this idea, I collect a small dataset on toy tasks in simulation and a real robot using the interface I developed. I then show that the trained policy can be deployed with a reasonable success rate.
+Our world is designed by humans, for humans. This makes humanoid robots the perfect general-purpose platform to automate repetitive or dangerous tasks done by humans. However, due to the complexity of humanoid robots and the shortage of demonstration data, research in robot learning for humanoids is scarce. To address these challenges, I present a VR interface named DRIVR (Demonstrations for Robots in Immersive Virtual Reality) for collecting human demonstrations for humanoid robots in both simulation and reality. The demonstrations are then used to train an imitation learning algorithm that uses an underlying controller to abstract away the complexity of whole-body control. I further propose that by embedding this data collection mechanism in VR video games, we can amass a large-scale dataset of high quality human demonstrations that can drive the development of future autonomous humanoids. To illustrate the feasibility of this idea, I collect a small dataset on toy tasks in simulation and a real robot using the VR interface. I then show that the trained policy can be deployed with a reasonable success rate.
 
 
 \tableofcontents   % Table of Contents will be automatically
